--- a/caliopen_website/locale/lv/LC_MESSAGES/caliopen_website.po
+++ b/caliopen_website/locale/lv/LC_MESSAGES/caliopen_website.po
@@ -115,7 +115,7 @@ msgstr "In order for the development of our user interface to advance quickly, w
 
 #: caliopen_website/templates/layout/contact.jinja2:20
 #: caliopen_website/templates/layout/page.jinja2:74
-msgid "Forker nous sur GitHub"
+msgid "Forkez nous sur GitHub"
 msgstr "Fork us on GitHub"
 
 #: caliopen_website/templates/layout/contact.jinja2:21
@@ -139,13 +139,17 @@ msgstr "Contact the CaliOpen team"
 msgid "enveloppe"
 msgstr "enveloppe"
 
-#: caliopen_website/templates/layout/contact.jinja2:30
+#: caliopen_website/templates/layout/contact.jinja2:31
 msgid "Nous contacter sur irc"
 msgstr "Contact us on irc"
 
-#: caliopen_website/templates/layout/contact.jinja2:31
+#: caliopen_website/templates/layout/contact.jinja2:32
 msgid "bubble"
 msgstr "bubble"
+
+#: caliopen_website/templates/layout/contact.jinja2:36
+msgid "Nous suivre sur Trello"
+msgstr "Follow us on Trello"
 
 #: caliopen_website/templates/layout/features.jinja2:40
 msgid "Calculé pour chaque élément de l'interface (compte, message, contact...), ce niveau est à la fois un indicateur de confiance et une incitation à mieux se protéger."
